--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <body>
 <h1>TMです。</h1>
 	<br />
-　　　　プログラミングを始めました。
+　　　　プログラミングを始めました。<br/>
+ニュースは<a href="https://www.yahoo.co.jp">Yhoo!
+Japan</a>で見ます。
 </body>
 </html>
