--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 <h1>TMです。</h1>
 	<br />
 　　　　プログラミングを始めました。<br/>
-ニュースは<a href="https://www.yahoo.co.jp">Yhoo!
+ニュースは<a href="https://www.yahoo.co.jp">Yhoo!　
 Japan</a>で見ます。
+<br/>
+	私のおすすめのオンラインショップは<a href="https://www.amazon.co.jp">アマゾン
+	</a>です。
 </body>
 </html>
