--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 　　　　プログラミングを始めました。<br/>
 ニュースは<a href="https://www.yahoo.co.jp">Yhoo!　
 Japan</a>で見ます。
-<br/>
+<br/> 
+
 	私のおすすめのオンラインショップは<a href="https://www.amazon.co.jp">アマゾン
 	</a>です。
+新しいページは<a href="./newPage.html">こちら</a>です。
 </body>
 </html>
